--- a/embedded/embedded-firmware/Makefile
+++ b/embedded/embedded-firmware/Makefile
@@ -5,7 +5,16 @@ APP_STACKSIZE=300
 
 VPATH += src/
 VPATH += ../shared-firmware/src/
-PROJ_OBJ += commands_handler.o communication_manager.o firmware_controller.o navigation_system.o timer.o app_main.o vector3d.o firmware_sensor.o sensor_data_updater.o
+PROJ_OBJ += commands_handler.o \
+	communication_manager.o \
+	abstract_controller.o \
+	firmware_controller.o \
+	navigation_system.o \
+	timer.o \
+	app_main.o \
+	vector3d.o \
+	firmware_sensor.o \
+	sensor_data_updater.o
 
 CRAZYFLIE_BASE=../crazyflie-firmware
 
