--- a/backend/.vscode/tasks.json
+++ b/backend/.vscode/tasks.json
@@ -2,20 +2,26 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Lint all services",
+            "label": "Lint Backend Server",
             "type": "shell",
-            "command": "pylint services --rcfile pylintrc"
-        },
-        {
-            "label": "Lint all tests",
-            "type": "shell",
-            "command": "pylint test --rcfile pylintrc"
+            "command": "pylint * --rcfile pylintrc"
         },
         {
             "label": "Run tests",
             "type": "shell",
             "command": "pytest"
+        },
+        {
+            "label": "Start backend",
+            "type": "shell",
+            "command": "python3 server.py"
+        },
+        {
+            "label": "Run autoformater",
+            "type":"shell",
+            "command":"yapf --style google -rpi ."
         }
+
     ]
 
 }
