--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -10,5 +10,10 @@
     "python.testing.unittestEnabled": true,
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.linting.lintOnSave": true
+    "python.linting.lintOnSave": true,
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "yapf",
+    "python.formatting.yapfArgs": [
+        "--style={based_on_style: google, column_limit: 80}"
+    ]
 }
