--- a/backend/.vscode/tasks.json
+++ b/backend/.vscode/tasks.json
@@ -15,6 +15,11 @@
             "label": "Run tests",
             "type": "shell",
             "command": "pytest"
+        },
+        {
+            "label": "Start server",
+            "type": "shell",
+            "command": "python3 server.py"
         }
     ]
 
