--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -66,7 +66,7 @@
       "command": "rm -rf build && mkdir build && cd build && cmake ../ && make -j`nproc` && ./simulation_firmware"
     },
     {
-      "label": "Test all",
+      "label": "Test All",
       "type": "shell",
       "dependsOn": [
         "Test embedded firmware",
