C++ et les static me confuse

--- a/embedded/.vscode/settings.json
+++ b/embedded/.vscode/settings.json
@@ -14,7 +14,8 @@
     "atomic": "cpp",
     "cstdint": "cpp",
     "stop_token": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "array": "cpp"
   },
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
