--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
   },
   "workspaceFolder": "/workspaces/INF3995-106/backend",
   "extensions": [
-    "ms-python.python"
+    "ms-python.python",
+    "himanoa.Python-autopep8"
   ],
   "runArgs": [
     "--network=host",
