--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - /app/node_modules
       - /dev:/dev
       - /tmp/socket:/tmp/socket
+      - /var/run/docker.sock:/var/run/docker.sock
     network_mode: host
 
     
