--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "ag-charts-community": "^5.0.0",
     "ag-charts-vue": "^5.0.0",
-    "chart.js": "^3.7.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "socket.io-client": "^4.4.1",
     "typed-vuex": "^0.2.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-class-component": "^7.2.3",
+    "vue-lodash": "^2.1.2",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.180",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
