slight modification to pipeline

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -56,7 +56,7 @@ install_dependencies:
 lint_backend:
   stage: lint
   script:
-    - yapf --style google -rpi .
+    - yapf --style google -rpd .
 
 test_backend:
   stage: test
