--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -6,7 +6,10 @@
             "type": "python",
             "request": "launch",
             "program": "server.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "env": {
+                "GEVENT_SUPPORT": "True",
+            }
         }
     ]
 }
