Repaired Start Sh

--- a/embedded/docker-compose.yml
+++ b/embedded/docker-compose.yml
@@ -18,4 +18,7 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /tmp/socket:/tmp/socket
+
+    devices:
+      - /dev/dri:/dev/dri
     network_mode: host
