--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,14 +41,17 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-unicorn": "^19.0.1",
     "eslint-plugin-vue": "^6.2.2",
+    "http": "^0.0.1-security",
     "jest": "^24.9.0",
     "jest-fetch-mock": "^3.0.3",
+    "jest-serializer-vue": "^2.0.2",
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
+    "socket.io": "^4.4.1",
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   }
 }
