--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -83,7 +83,7 @@
       "dependsOn" : [
         "Compile Simulation Firmware"
       ],
-      "command": "cd build && ../../run-clang-tidy.py -quiet -header-filter='.*simulation|shared-firmware.*' -checks=\"-*,boost-*,,bugprone-*,clang-analyzer-*,concurrency-*,cppcoreguidelines-*,google-*,misc-*,modernize-*,performance-*,portability-*,readability-*,-modernize-use-trailing-return-type,-cppcoreguidelines-non-private-member-variables-in-classes,-misc-non-private-member-variables-in-classes\""
+      "command": "cd build && ../../run-clang-tidy.py -quiet -header-filter='.*simulation|shared-firmware.*' -checks=\"-*,boost-*,,bugprone-*,clang-analyzer-*,concurrency-*,cppcoreguidelines-*,google-*,misc-*,modernize-*,performance-*,portability-*,readability-*,-modernize-use-trailing-return-type,-cppcoreguidelines-non-private-member-variables-in-classes,-misc-non-private-member-variables-in-classes, -cppcoreguidelines-pro-type-reinterpret-cast\""
     },
     
     {
@@ -92,7 +92,7 @@
       "options": {
         "cwd": "${workspaceFolder}/embedded-firmware/lint-workspace"
       },
-      "command": "../../run-clang-tidy.py -quiet -header-filter='.*embedded-firmware|shared-firmware.*' -checks=\"-*,boost-*,,bugprone-*,clang-analyzer-*,concurrency-*,cppcoreguidelines-*,google-*,misc-*,modernize-*,performance-*,portability-*,readability-*,-modernize-use-trailing-return-type,-cppcoreguidelines-non-private-member-variables-in-classes,-misc-non-private-member-variables-in-classes\""
+      "command": "../../run-clang-tidy.py -quiet -header-filter='.*embedded-firmware|shared-firmware.*' -checks=\"-*,boost-*,,bugprone-*,clang-analyzer-*,concurrency-*,cppcoreguidelines-*,google-*,misc-*,modernize-*,performance-*,portability-*,readability-*,-modernize-use-trailing-return-type,-cppcoreguidelines-non-private-member-variables-in-classes,-misc-non-private-member-variables-in-classes, -cppcoreguidelines-pro-type-union-access, -cppcoreguidelines-pro-type-reinterpret-cast\""
     },
     {
       "label": "Run Pipeline",
