--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@riophae/vue-treeselect": "^0.4.0",
     "ag-charts-community": "^5.0.0",
     "ag-charts-vue": "^5.1.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "highlight.js": "^11.5.0",
     "lodash": "^4.17.21",
     "socket.io-client": "^4.4.1",
     "typed-vuex": "^0.2.0",
