Fixed naming conventions for files and added color_gradient.cc to clang

--- a/embedded/embedded-firmware/Makefile
+++ b/embedded/embedded-firmware/Makefile
@@ -14,7 +14,7 @@ PROJ_OBJ += commands_handler.o \
 	vector3d.o \
 	firmware_sensors.o \
 	sensors_data_updater.o \
-	colorGradient.o \
+	color_gradient.o \
 	p2p_task.o
 
 CRAZYFLIE_BASE=../crazyflie-firmware
