Retour a la base

--- a/embedded/.vscode/settings.json
+++ b/embedded/.vscode/settings.json
@@ -75,7 +75,23 @@
     "thread": "cpp",
     "cinttypes": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "tmp": "cpp",
+    "valarray": "cpp",
+    "bitset": "cpp",
+    "span": "cpp",
+    "regex": "cpp",
+    "cfenv": "cpp",
+    "charconv": "cpp",
+    "codecvt": "cpp",
+    "complex": "cpp",
+    "csetjmp": "cpp",
+    "csignal": "cpp",
+    "cuchar": "cpp",
+    "numbers": "cpp",
+    "scoped_allocator": "cpp",
+    "shared_mutex": "cpp",
+    "typeindex": "cpp"
   },
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
