--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,9 @@
   "dependencies": {
     "@mdi/js": "^6.6.96",
     "@riophae/vue-treeselect": "^0.4.0",
-    "ag-charts-community": "^5.0.0",
-    "ag-charts-vue": "^5.1.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "highlight.js": "^11.5.0",
-    "lodash": "^4.17.21",
     "socket.io-client": "^4.4.1",
     "typed-vuex": "^0.2.0",
     "typeface-roboto": "^1.1.13",
@@ -25,7 +22,6 @@
     "vue-chartjs": "^3.5.1",
     "vue-class-component": "^7.2.3",
     "vue-custom-scrollbar": "^1.4.3",
-    "vue-lodash": "^2.1.2",
     "vue-property-decorator": "^9.1.2",
     "vue-resizable": "2.1.3",
     "vue-router": "^3.2.0",
@@ -57,6 +53,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "http": "^0.0.1-security",
     "jest": "^24.9.0",
+    "jest-canvas-mock": "^2.3.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-serializer-vue": "^2.0.2",
     "material-design-icons": "^3.0.1",
